update course 3 - quersion 1